right crop mode for supporters

--- a/src/_includes/widgets/supporters.liquid
+++ b/src/_includes/widgets/supporters.liquid
@@ -1,7 +1,7 @@
 <div class="funders--grid">
 {% for supporter in supporters.supporters %}
 <div class="funders--item">
-{% srcset supporter.logo, "Funders’ logo", "funders--item--image", 240, 240, "(min-width: 1120px) 200px, 30vw", "c_scale" %}
+{% srcset supporter.logo, "Funders’ logo", "funders--item--image", 240, 240, "(min-width: 1120px) 200px, 30vw", "c_fit" %}
 <h3 class="funders--item--title">{{ supporter.name }}</h3>
 </div>
 {% endfor %}
