change to new commento domain

--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -13,7 +13,7 @@ layout: /layouts/base.njk
       <div>
         {% if tags %}<p class="pre-title">{{ tags | first | capitalize }}</p>{% endif %}
         <h1 class="page-title">{{ title }}</h1>
-        
+
       </div>
     </div>
   </div>
@@ -29,7 +29,7 @@ layout: /layouts/base.njk
 
   <div class="page-comments container container__narrow">
     <div id="commento"></div>
-    <script src="https://commento.letsdance.agency/js/commento.js"></script>
+    <script src="https://commento.jdp.org.uk/js/commento.js"></script>
   </div>
 
 </div>
