--- a/src/_includes/extends/html5boilerplate.njk
+++ b/src/_includes/extends/html5boilerplate.njk
@@ -35,7 +35,7 @@
   {% endblock %}
 </head>
 
-<body class="{{ page.filePathStem.slice(1) | replace('/','--') }}">
+<body class="{{ page.filePathStem.slice(1) | replace('/',' ') }} {{ page.filePathStem.slice(1) | replace('/','--') }}">
   {% block body %}
     <!--[if lte IE 9]>
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
