--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -1,6 +1,7 @@
 {% extends "extends/html5boilerplate.njk" %}
 
-{% set title = (title + " - " + site.title) if title else (site.title + " - " + site.description) %}
+
+{% set title = (title | markdowninline | striptags + " - " + site.title) if title else (site.title + " - " + site.description) %}
 {% set description = (description) if description else (site.description) %}
 {% set lang = lang | default(site.lang) %}
 
