--- a/src/_resources/scss/app.scss
+++ b/src/_resources/scss/app.scss
@@ -14,6 +14,7 @@
 @import "layout/home_ideas";
 @import "layout/archive";
 @import "layout/post";
+@import "layout/project";
 @import "layout/commento";
 @import "layout/funders";
 
