--- a/src/_resources/scss/base/_typography.scss
+++ b/src/_resources/scss/base/_typography.scss
@@ -16,18 +16,22 @@ html {
 }
 
 h1,
+h2 {
+  font-family: $heading-font-family;
+  text-transform: uppercase;
+  font-weight: 900;
+  letter-spacing: $heading-letter-spacing;
+}
+
+h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-  font-family: $heading-font-family;
   font-size: modular-scale(1);
-  text-transform: uppercase;
-  font-weight: 900;
   line-height: $heading-line-height;
   margin: 0 0 $small-spacing;
-  letter-spacing: $heading-letter-spacing;
 }
 
 .pre-title {
