--- a/src/_resources/scss/base/_layout.scss
+++ b/src/_resources/scss/base/_layout.scss
@@ -33,6 +33,10 @@ body {
   &__narrow {
     max-width: $max-line-length;
   }
+
+  + .align-center {
+    margin-top: $base-spacing;
+  }
 }
 
 .align-center {
