--- a/src/_resources/scss/layout/project.scss
+++ b/src/_resources/scss/layout/project.scss
@@ -33,6 +33,8 @@
 
     &--image {
       position: relative;
+      width: 100%;
+      height: auto;
       margin-left: auto;
       margin-right: auto;
       max-width: 50vw;
@@ -75,12 +77,15 @@
   }
 
   &--intro {
-    margin-top: 3 * $base-spacing;
-    margin-bottom: 3 * $base-spacing;
 
-    @media screen and (min-width: $medium-screen) {
-      display: flex;
-      flex-direction: row-reverse;
+    &--container {
+      margin-top: 3 * $base-spacing;
+      margin-bottom: 3 * $base-spacing;
+
+      @media screen and (min-width: $medium-screen) {
+        display: flex;
+        flex-direction: row-reverse;
+      }
     }
 
     &--item {
@@ -166,6 +171,24 @@
 
       &__button {
         margin-top: $base-spacing;
+      }
+    }
+  }
+
+  &--call-to-action {
+    &--container {
+      margin-top: 3 * $base-spacing;
+      margin-bottom: 3 * $base-spacing;
+
+      @media screen and (min-width: $medium-screen) {
+        display: flex;
+        flex-direction: row;
+      }
+    }
+
+    &--text {
+      @media screen and (min-width: $medium-screen) {
+        flex: 0 0 50%;
       }
     }
   }
