--- a/src/_resources/scss/layout/project.scss
+++ b/src/_resources/scss/layout/project.scss
@@ -33,7 +33,7 @@
 
     &--image {
       position: relative;
-      width: 100%;
+      width: 14 * $base-spacing;
       height: auto;
       margin-left: auto;
       margin-right: auto;
