--- a/src/_resources/scss/layout/home_projects.scss
+++ b/src/_resources/scss/layout/home_projects.scss
@@ -4,52 +4,96 @@
     display: flex;
     flex-direction: column;
     @media screen and (min-width: $medium-screen) {
-      align-items: center;
       flex-direction: row;
     }
   }
 }
 
-.intro__title {
-  font-size: modular-scale(3);
-  font-family: $base-font-family;
-  text-transform: none;
-}
+.project__item {
+  margin-top: $base-spacing;
+  flex: 0 1 33.33%;
+  display: flex;
+  flex-direction: row;
+  padding: $base-spacing;
+  border-radius: $base-border-radius;
+  transition: box-shadow 0.5s, transform 0.5s;
 
-.intro__copy {
-  flex: 0 0 47.5%;
-  margin-right: 7.5%;
-  p:last-child {
-    margin-bottom: 0;
-  }
-}
-
-.intro__projects {
-  margin-top: 2 * $base-spacing;
   @media screen and (min-width: $medium-screen) {
-    margin-top: $base-spacing;
+    display: block;
+    flex-direction: column;
+  }
+  @media screen and (min-width: $medium-screen) {
+    + .project__item {
+      margin-left: 1 * $base-spacing;
+    }
   }
 
   p {
     color: $dark-gray;
-    font-size: modular-scale(-1);
+  }
+
+  &:hover {
+    color: $base-font-color;
+    box-shadow: $base-box-shadow;
+    transform: translateY(-$small-spacing/2);
+  }
+}
+
+.project__text {
+  @media screen and (min-width: $medium-screen) {
+    margin-top: -$base-spacing;
+    position: relative;
+  }
+}
+
+.project__image {
+  border-radius: 99999px;
+  overflow: hidden;
+  margin-right: $base-spacing;
+  flex: 0 0 30%;
+  margin-bottom: auto;
+  padding-top: 30%;
+  position: relative;
+  @media screen and (min-width: $medium-screen) {
+    margin-right: 0;
+    width: calc(100% - #{$base-spacing});
+    padding-top: calc(100% - #{$base-spacing});
+    flex: none;
+  }
+  img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
   }
 }
 
 .project__title {
-  @extend .ticker;
-  font-size: modular-scale(1);
+  background-color: $black;
+  padding: $base-spacing/2;
+  color: white;
+  font-size: modular-scale(2);
+  margin-bottom: $small-spacing;
+  @media screen and (min-width: $medium-screen) {
+    font-size: modular-scale(1);
+    margin-bottom: $base-spacing;
+  }
   font-family: $base-font-family;
   text-transform: none;
-  margin-bottom: $small-spacing/2;
-}
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  clip-path: polygon(0% 0%, 95% 2%, 99% 100%, 0% 95%);
+  padding-right: $base-spacing;
 
-.project__description {
-  margin-bottom: 0;
-}
-
-.intro__project {
-  + .intro__project {
-    margin-top: 1.5 * $base-spacing;
+  &::after {
+    display: inline-block;
+    font-weight: 900;
+    margin-left: 0.25em;
+    font-size: modular-scale(2);
+    content: ">";
+    font-family: $heading-font-family;
   }
 }
