--- a/src/_resources/scss/base/_base.scss
+++ b/src/_resources/scss/base/_base.scss
@@ -5,7 +5,6 @@
 
 @import "variables";
 
-
 @import "fonts";
 @import "forms";
 @import "layout";
@@ -14,3 +13,4 @@
 @import "tables";
 @import "typography";
 @import "buttons";
+@import "details-summary";
