fix map overlay

--- a/src/_includes/layouts/project.njk
+++ b/src/_includes/layouts/project.njk
@@ -73,7 +73,7 @@ layout: /layouts/base.njk
   </section>
 {% endif %}
 {% if map %}
-  <section id="map">
+  <section id="map" class="relative">
     {{ map.iframe | safe }}
   </section>
 {% endif %}
