update link in footer

--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -13,6 +13,6 @@
     </div>
   </div>
   <div class="container footer--secondary">
-    <p>Zero Waste Leeds is a project by <a href="http://www.socialbusinessbrokers.co.uk/">Social Business Brokers CIC</a> - a registered company in England and Wales 07272068.</p>
+    <p>Zero Waste Leeds is a project by <a target="_blank" href="https://www.wearesbb.org.uk/">Social Business Brokers CIC</a> - a registered company in England and Wales 07272068.</p>
   </div>
 </section>
